Node_Package/Node_lg_groundtruth_data_ws/lg_groundtruth_data_ws/log/build_2021-01-14_04-54-09/lg_sub_groundtruth/stderr.log
  File "/home/acclivis_linux2/script/lg_groundtruth_data_ws/install/lg_sub_groundtruth/lib/python3.6/site-packages/lg_sub_groundtruth/lg_gt3d_subscriber.py", line 235
    report_file.write("Result intersection over union(IOU) : %s %s \n" str(IOU_3d) + str(IOU_2d) )
                                                                         ^
SyntaxError: invalid syntax

